<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InCense</string>
    <string name="http_client_id">InCense-1.0 (Android)</string>
    <string name="app_name_survey">InCense :: Survey</string>
    <string name="activity_name_nfc">InCense :: NFC tag</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="project_signature_filename">/sdcard/project_signature.json</string>
    <string name="project_new_signature_filename">/sdcard/project_new_signature.json</string>
    <string name="project_filename">/sdcard/project.json</string>
    <string name="server_sink_path">/uploads/json</string>
    <string name="server_survey_path">/uploads/json</string>
    <string name="server_media_path">/uploads/audio</string>
    <string name="server_project_signature_path">/downloads/signature</string>
    <string name="server_project_path">/downloads/project</string>
    <string name="results_audio_parent">/sdcard/</string>
    <string name="results_audio_child">audio</string>
    <string name="results_audio_extension">.raw</string>
    <string name="results_data_parent">/sdcard/</string>
    <string name="results_data_child">data</string>
    <string name="results_data_extension">.json</string>
    <string name="results_survey_parent">/sdcard/</string>
    <string name="results_survey_child">survey</string>
    <string name="results_survey_extension">.json</string>
    <string name="filequeue_max_files">100</string>
    <string name="filequeue_filename">/sdcard/results.json</string>
    <string name="splashscreen_time">3000</string>
    <string name="local_service_disconnected">Local service disconnected</string>
    <string name="local_service_connected">Local service connected</string>
    <string name="survey_max_answers">5</string>

    <!-- this is a comment -->
    <string name="json_file_path">/res/data/data.json</string>
    <string name="json_queue_file_path">/res/data/queue.json</string>
    <string name="audio_file_path">/res/data/audio.mp4</string>
    <string name="new_recording">Record</string>
    <string name="record_instructions">Press start to run the sensing process.</string>
    <string name="session_title">Recording session</string>
    <string name="session_active_message">Sensing and collecting data... Please wait a moment.</string>
    <string name="session_completed_message">Recording session completed!</string>
    <string name="no_username_message">Please enter a username.</string>
    <string name="alert_tags">It\'s recommended to enter at least one tag describing this moment.</string>

    <!-- login & register activities -->
    <string name="mobile_app">Mobile Application</string>
    <string name="login_title">Login</string>
    <string name="username_label">Username:&#160;</string>
    <string name="username_inst">Enter username</string>
    <string name="username_empty">Please enter your username</string>
    <string name="password_label">Password:&#160;</string>
    <string name="password_inst">Enter password</string>
    <string name="password_empty">Please enter your password</string>
    <string name="incenseid_label">InCense ID*:&#160;</string>
    <string name="password_confirmation_label">Password confirmation: </string>
    <string name="email_label">Email:&#160;</string>
    <string name="device_label">Device:&#160;</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign-up</string>
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="required_notice">* required field</string>
    <string name="logged_in_message">Welcome back</string>
    <string name="incorrect_password_message">Username or password is incorrect.</string>
    <string name="unknown_username_message">Username was not found.</string>
    <string name="no_connection_message">No connection available.</string>
    
    <!-- MainActivity -->
    <string name="unknown_username">Unknown</string>
    <string name="start_session">Start session</string>
    <string name="nfctag">NFC Tag found: </string>
</resources>
