<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView android:id="@+id/textview_incenseid"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/incenseid_label" />
    <EditText android:id="@+id/edittext_incenseid"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" />
    <TextView android:id="@+id/textview_username"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/username_label" />
    <EditText android:id="@+id/edittext_username"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" />
    <TextView android:id="@+id/textview_password"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/password_label" />
    <EditText android:id="@+id/edittext_password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:password="true"/>
    <TextView android:id="@+id/textview_password_confirmation"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/password_confirmation_label" />
    <EditText android:id="@+id/edittext_password_confirmation"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:password="true"/>
    <TextView android:id="@+id/textview_email"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/email_label" />
    <EditText android:id="@+id/edittext_email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:password="true"/>
    <Button   android:id="@+id/button_submit"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/submit_label" />
    <Button   android:id="@+id/button_cancel"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:text="@string/cancel_label" />
</LinearLayout>